fdo#55525 import RTF_TRLEFT

Additionally:
1) Make sure cell margins are zero when they are not defined.
2) Handle cellx values in case of a negative left margin.

Change-Id: I9b8fb700b6459e622396c98e4344aba79f62c96e